// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer close by clicking overlay 1`] = `
<blaze-drawer
  class="hydrated"
  dismissible=""
  open=""
>
  
  
  <blaze-overlay
    aria-hidden=""
    open=""
  />
  <aside
    aria-expanded="isOpen() {
        /* istanbul ignore next */cov_1xggtsdp5v.f[3]++;
        cov_1xggtsdp5v.s[14]++;

        return this._isOpen;
    }"
    class="o-drawer o-drawer--bottom o-drawer--visible"
  >
    
    default
  </aside>
</blaze-drawer>
`;

exports[`Drawer close by clicking overlay 2`] = `
<blaze-drawer
  class="hydrated"
  dismissible=""
  open=""
>
  
  
  <blaze-overlay
    aria-hidden=""
  />
  <aside
    aria-expanded="isOpen() {
        /* istanbul ignore next */cov_1xggtsdp5v.f[3]++;
        cov_1xggtsdp5v.s[14]++;

        return this._isOpen;
    }"
    class="o-drawer o-drawer--bottom"
  >
    
    default
  </aside>
</blaze-drawer>
`;

exports[`Drawer close drawer method 1`] = `
<blaze-drawer
  class="hydrated"
  open=""
>
  
  
  <blaze-overlay
    aria-hidden=""
    open=""
  />
  <aside
    aria-expanded="isOpen() {
        /* istanbul ignore next */cov_1xggtsdp5v.f[3]++;
        cov_1xggtsdp5v.s[14]++;

        return this._isOpen;
    }"
    class="o-drawer o-drawer--bottom o-drawer--visible"
  >
    
    default
  </aside>
</blaze-drawer>
`;

exports[`Drawer close drawer method 2`] = `
<blaze-drawer
  class="hydrated"
  open=""
>
  
  
  <blaze-overlay
    aria-hidden=""
  />
  <aside
    aria-expanded="isOpen() {
        /* istanbul ignore next */cov_1xggtsdp5v.f[3]++;
        cov_1xggtsdp5v.s[14]++;

        return this._isOpen;
    }"
    class="o-drawer o-drawer--bottom"
  >
    
    default
  </aside>
</blaze-drawer>
`;

exports[`Drawer renders as open 1`] = `
<blaze-drawer
  class="hydrated"
  open=""
>
  
  
  <blaze-overlay
    aria-hidden=""
    open=""
  />
  <aside
    aria-expanded="isOpen() {
        /* istanbul ignore next */cov_1xggtsdp5v.f[3]++;
        cov_1xggtsdp5v.s[14]++;

        return this._isOpen;
    }"
    class="o-drawer o-drawer--bottom o-drawer--visible"
  >
    
    default
  </aside>
</blaze-drawer>
`;

exports[`Drawer renders correctly with no props 1`] = `
<blaze-drawer
  class="hydrated"
>
  
  
  <blaze-overlay
    aria-hidden=""
  />
  <aside
    aria-expanded="isOpen() {
        /* istanbul ignore next */cov_1xggtsdp5v.f[3]++;
        cov_1xggtsdp5v.s[14]++;

        return this._isOpen;
    }"
    class="o-drawer o-drawer--bottom"
  >
    
    default
  </aside>
</blaze-drawer>
`;

exports[`Drawer renders dismissible overlay 1`] = `
<blaze-drawer
  class="hydrated"
  dismissible=""
  open=""
>
  
  
  <blaze-overlay
    aria-hidden=""
    open=""
  />
  <aside
    aria-expanded="isOpen() {
        /* istanbul ignore next */cov_1xggtsdp5v.f[3]++;
        cov_1xggtsdp5v.s[14]++;

        return this._isOpen;
    }"
    class="o-drawer o-drawer--bottom o-drawer--visible"
  >
    
    default
  </aside>
</blaze-drawer>
`;

exports[`Drawer show drawer method 1`] = `
<blaze-drawer
  class="hydrated"
>
  
  
  <blaze-overlay
    aria-hidden=""
  />
  <aside
    aria-expanded="isOpen() {
        /* istanbul ignore next */cov_1xggtsdp5v.f[3]++;
        cov_1xggtsdp5v.s[14]++;

        return this._isOpen;
    }"
    class="o-drawer o-drawer--bottom"
  >
    
    default
  </aside>
</blaze-drawer>
`;

exports[`Drawer show drawer method 2`] = `
<blaze-drawer
  class="hydrated"
>
  
  
  <blaze-overlay
    aria-hidden=""
    open=""
  />
  <aside
    aria-expanded="isOpen() {
        /* istanbul ignore next */cov_1xggtsdp5v.f[3]++;
        cov_1xggtsdp5v.s[14]++;

        return this._isOpen;
    }"
    class="o-drawer o-drawer--bottom o-drawer--visible"
  >
    
    default
  </aside>
</blaze-drawer>
`;
